<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Activity.Addmybusiness_act">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradientop"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="35dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_arrow_left_black_24dp"
                android:contentDescription="@string/app_name" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textVsiew2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="Add My Business"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:visibility="invisible"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView

                android:layout_width="35dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_arrow_left_black_24dp"
                android:contentDescription="@string/app_name" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="right"
        android:layout_weight="0.07"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="sans-serif"

            android:text="@string/already_have_a_one_stop_trade_account"
            android:textColor="#5E5D5D"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txt_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
android:layout_marginRight="7sp"
            android:fontFamily="sans-serif"
            android:text="@string/sign_in_here"
            android:textColor="@color/colorPrimary"
            android:textSize="11sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_catname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:fontFamily="sans-serif"
        android:padding="3dp"
        android:text="@string/fatweb_solutions"
        android:textColor="#5E5D5D"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:fontFamily="sans-serif"
        android:text="@string/nearly_there_we_just_need_a_few_details"
        android:textColor="#5E5D5D"
        android:textSize="13sp"
        android:textStyle="bold" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/bg_transparent"
                android:orientation="vertical"
                android:padding="10dp">


                <TextView
                    android:id="@+id/textViaew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="8dp"
                    android:text="@string/your_business_detail"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_businessphn"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="#ffffff"
                    android:ems="10"

                    android:hint="@string/business_phone_number"
                    android:inputType="textPersonName"
                    android:paddingLeft="10sp"
                    android:textColorHint="#747373"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/edt_address"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="#ffffff"
                    android:ems="10"
                    android:foreground="@drawable/ripple"
                    android:hint="@string/start_typing_an_address"
                    android:inputType="textPersonName"
                    android:paddingLeft="10sp"
                    android:textColorHint="#747373"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/edt_suberb"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="#ffffff"
                    android:ems="10"
                    android:foreground="@drawable/ripple"
                    android:hint="@string/suburb"
                    android:inputType="textPersonName"
                    android:paddingLeft="10sp"
                    android:textColorHint="#747373"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/edt_city"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="#ffffff"
                    android:ems="10"
                    android:foreground="@drawable/ripple"
                    android:hint="@string/city"
                    android:inputType="textPersonName"
                    android:paddingStart="10sp"
                    android:textColorHint="#747373"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/edt_postcode"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="#ffffff"
                    android:ems="10"
                    android:foreground="@drawable/ripple"
                    android:hint="@string/postcode1"
                    android:inputType="numberDecimal"
                    android:paddingLeft="10sp"
                    android:textColorHint="#747373"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/bg_transparent"
                android:orientation="vertical"
                android:padding="10dp">


                <TextView
                    android:id="@+id/textVew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:fontFamily="sans-serif"
                    android:padding="8dp"
                    android:text="@string/your_detail"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="#ffffff"
                    android:ems="10"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:paddingLeft="10sp"
                    android:textColor="#333333"
                    android:textColorHint="#747373"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/edt_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="#ffffff"
                    android:ems="10"
                    android:foreground="@drawable/ripple"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:paddingLeft="10sp"
                    android:textColor="#333333"
                    android:textColorHint="#747373"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/edt_phnnumber"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="#ffffff"
                    android:ems="10"
                    android:foreground="@drawable/ripple"

                    android:hint="@string/phone_number"
                    android:inputType="number"
                    android:paddingLeft="10sp"
                    android:textColor="#333333"
                    android:textColorHint="#747373"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="#ffffff"
                    android:ems="10"
                    android:foreground="@drawable/ripple"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"

                    android:paddingLeft="10sp"
                    android:textColor="#333333"
                    android:textColorHint="#747373"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/edt_postcodedetail"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="#ffffff"
                    android:ems="10"
                    android:foreground="@drawable/ripple"
                    android:hint="@string/postcode"
                    android:inputType="numberDecimal"

                    android:paddingLeft="10sp"
                    android:textColor="#333333"
                    android:textColorHint="#747373"
                    android:textSize="13sp" />


                <EditText
                    android:id="@+id/edt_passwrd"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="#ffffff"
                    android:ems="10"
                    android:hint="@string/password1"

                    android:inputType="textPersonName"
                    android:paddingLeft="10sp"
                    android:textColor="#333333"
                    android:textColorHint="#747373"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/edt_confrmpassword"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="#ffffff"
                    android:ems="10"
                    android:foreground="@drawable/ripple"

                    android:hint="@string/confirm_password"
                    android:inputType="textPersonName"
                    android:paddingLeft="10sp"
                    android:textColor="#333333"
                    android:textColorHint="#747373"
                    android:textSize="13sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_addbusiness"
                android:layout_width="221dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/btndesign_yellow"
                android:fontFamily="sans-serif"
                android:padding="5dp"
                android:text="@string/access_my_free_business_page"
                android:textColor="#ffffff"
                android:textSize="13sp" />

        </LinearLayout>


    </ScrollView>

</LinearLayout>