<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Activity.Addmybusiness_act">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradientop"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="35dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_arrow_left_black_24dp"
                android:contentDescription="@string/app_name" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"

                android:fontFamily="sans-serif-condensed-medium"
                android:text="Add My Business"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:visibility="invisible"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView

                android:layout_width="35dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_arrow_left_black_24dp"
                android:contentDescription="@string/app_name" />


        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:padding="8dp"
        android:text="Check to see if your business is already on The wedding Directory:"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:elevation="4dp"
            android:foreground="@drawable/ripple"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="#F3F3F3"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <EditText
                    android:id="@+id/edt_businessname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="#ffffff"
                    android:ems="10"
                    android:hint="@string/my_business"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textSize="12dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/material_spinner1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Select Here"
            android:visibility="gone"
            app:met_floatingLabel="normal"
            android:textColorHint="#CFD8DC"
            android:gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            android:text=" Category"
            android:textColor="#4D4C4C"


            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"

            android:elevation="4dp"
            android:foreground="@drawable/ripple"
            app:cardCornerRadius="5dp"
            app:cardBackgroundColor="@color/translucent_olive"
            app:cardElevation="5dp">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:backgroundTint="#646363"
                android:prompt="@string/app_name" />



            <TextView
                android:id="@+id/spinerhint"
                android:layout_width="334dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:gravity="center|left"
                android:visibility="gone"
                android:text="Select Category"
                android:textColor="#000000" />


            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:text="Select Category"
                android:visibility="gone"
                android:textColor="#000000"
                />

            <!--
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#F3F3F3"
                            android:gravity="center"

                            android:orientation="vertical"

                            android:padding="5dp">
                            <TextView
                                android:id="@+id/auto_complete_edit_textid"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_alignParentTop="true"
                                android:layout_margin="5dp"

                                android:hint="Select Category"
                                android:inputType="text"
                                android:maxLines="1"
                                android:paddingLeft="5dp"
                                android:textSize="10dp" />

                            <TextView
                                android:id="@+id/auto_complete_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_alignParentTop="true"
                                android:layout_margin="5dp"

                                android:background="@drawable/border1"
                                android:hint="Select Category"
                                android:inputType="text"
                                android:maxLines="1"
                                android:paddingLeft="5dp"
                                android:textSize="15dp" />
                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="3dp"

                                android:text="@string/select_category"
                                android:textColor="@color/colortheme"
                                android:textSize="15sp"
                                android:visibility="gone" />

                            <Spinner
                                android:id="@+id/spiner1"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="5dp"

                                android:popupBackground="@drawable/border3"
                                android:textColorHint="@color/colorPrimaryDark" />

                        </LinearLayout>
            -->
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_addbusiness"
            android:layout_width="140dp"
            android:layout_height="37dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/btndesign_yellow"
            android:fontFamily="sans-serif"
            android:padding="5dp"
            android:text="@string/add_my_business"
            android:textColor="#ffffff"
            android:textSize="13sp" />

    </LinearLayout>

</LinearLayout>